--- a/config.json
+++ b/config.json
@@ -41,7 +41,7 @@
 	"credentials": {
 		"gmailAccount": {
 			"email": "",
-			"clientId": "",
+			"clientId": "61565615440443",
 			"clientSecret": "",
 			"refreshToken": "",
 			"apiKey": ""
